--- a/main.scss
+++ b/main.scss
@@ -213,13 +213,15 @@ body {
   width: 90%;
   margin: -31rem auto 0 auto;
   padding: 3rem;
+  @include responsive(tablandscape) {
+    margin: -16rem auto 0 auto;
+  }
 
   @include responsive(desktop) {
     display: grid;
     grid-template-columns: repeat(6, 19.7%);
     align-items: center;
     min-height: 27rem;
-    margin: -16rem auto 0 auto;
   }
   select {
     font-size: 2rem;
